--- a/app/front/styles/application/layout.sass
+++ b/app/front/styles/application/layout.sass
@@ -9,6 +9,7 @@ html, body
   font-family: 'ITC Avant Garde Gothic Std Book'
   background-image: url("../images/bruit.png")
   background-repeat: repeat
+  @apply text-c-gray-dark
 
 // MENU
 .mobile-menu
@@ -85,7 +86,7 @@ html, body
 
 .footer-link
   @apply uppercase
-  @apply text-gray-600
+  @apply text-c-gray-dark
   @apply text-xs
 
 .separator
@@ -152,7 +153,7 @@ html, body
   @apply border
   @apply border-gray-300
   @apply bg-gray-50
-  @apply text-gray-500
+  @apply text-c-gray-dark
   &:hover
     @apply bg-gray-100
 
