--- a/app/views/shared/_person_card.html.slim
+++ b/app/views/shared/_person_card.html.slim
@@ -8,5 +8,5 @@
       - else
         = person.title
     - if person.description.present?
-      p.text-gray-700.text-sm
+      p.text-sm
         == person.description
