--- a/app/views/activities/_card.html.slim
+++ b/app/views/activities/_card.html.slim
@@ -5,5 +5,5 @@
     = render 'shared/item_relations', item: activity
     h3.text-lg.uppercase.text-primary.leading-5.mb-2
       = link_to activity.title, activity_path(activity)
-    p.text-gray-700.text-sm
+    p.text-sm
       == activity.description.to_plain_text.truncate(200)
