--- a/app/views/formations/subscriptions/_participant_fields.html.slim
+++ b/app/views/formations/subscriptions/_participant_fields.html.slim
@@ -2,29 +2,29 @@
   = f.hidden_field :id
   .md:flex.md:items-center.mb-6
     .md:w-1/3
-      = f.label :organization, class:"block text-gray-700 uppercase md:text-right mb-1 md:mb-0 pr-4"
+      = f.label :organization, class:"block uppercase md:text-right mb-1 md:mb-0 pr-4"
     .md:w-2/3
-      = f.text_field :organization, data: {target: 'nested-fields.copyField'}, class: 'appearance-none border border-gray-400 w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-primary-light'
+      = f.text_field :organization, data: {target: 'nested-fields.copyField'}, class: 'appearance-none border border-gray-400 w-full py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-primary-light'
   .md:flex.md:items-center.mb-6
     .md:w-1/3
-      = f.label :firstname, class:"required block text-gray-700 uppercase md:text-right mb-1 md:mb-0 pr-4"
+      = f.label :firstname, class:"required block uppercase md:text-right mb-1 md:mb-0 pr-4"
     .md:w-2/3
-      = f.text_field :firstname, class: 'appearance-none border border-gray-400 w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-primary-light'
+      = f.text_field :firstname, class: 'appearance-none border border-gray-400 w-full py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-primary-light'
   .md:flex.md:items-center.mb-6
     .md:w-1/3
-      = f.label :lastname, class:"required block text-gray-700 uppercase md:text-right mb-1 md:mb-0 pr-4"
+      = f.label :lastname, class:"required block uppercase md:text-right mb-1 md:mb-0 pr-4"
     .md:w-2/3
-      = f.text_field :lastname, class: 'appearance-none border border-gray-400 w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-primary-light'
+      = f.text_field :lastname, class: 'appearance-none border border-gray-400 w-full py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-primary-light'
   .md:flex.md:items-center.mb-6
     .md:w-1/3
-      = f.label :email, class:"required block text-gray-700 uppercase md:text-right mb-1 md:mb-0 pr-4"
+      = f.label :email, class:"required block uppercase md:text-right mb-1 md:mb-0 pr-4"
     .md:w-2/3
-      = f.email_field :email, class: 'appearance-none border border-gray-400 w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-primary-light'
+      = f.email_field :email, class: 'appearance-none border border-gray-400 w-full py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-primary-light'
   .md:flex.md:items-center.mb-6
     .md:w-1/3
-      = f.label :phone, class:"required block text-gray-700 uppercase md:text-right mb-1 md:mb-0 pr-4"
+      = f.label :phone, class:"required block uppercase md:text-right mb-1 md:mb-0 pr-4"
     .md:w-2/3
-      = f.text_field :phone, class: 'appearance-none border border-gray-400 w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-primary-light'
+      = f.text_field :phone, class: 'appearance-none border border-gray-400 w-full py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-primary-light'
   
   small= link_to "Supprimer", "#", data: { action: "click->nested-fields#remove_association" }, class: "js-delete-link underline uppercase text-red-500"
   = f.hidden_field :_destroy
