--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -61,7 +61,7 @@ html lang='fr'
 
     .footer
       .footer-line.w-full.bg-primary
-      .newsletter-subscription.bg-gray-200
+      .newsletter-subscription.bg-c-gray-light
         .max-w-6xl.mx-auto.flex.flex-col.md:flex-row.py-10
           .w-full.md:w-3/5.text-center.md:text-right.px-6
             p.uppercase = Setting.newsletter_subscription_title
@@ -73,7 +73,7 @@ html lang='fr'
 
       .footer-line-xl.w-full
 
-      .w-full.bg-gray-200
+      .w-full.bg-c-gray-light
         .max-w-6xl.mx-auto.flex.flex-col.md:flex-row
           .w-full.md:w-2/3.flex.flex-col.md:flex-row
             .w-full.md:w-1/3.py-3.md:py-8.px-3
@@ -88,7 +88,7 @@ html lang='fr'
                   li = link_to profile.title, profile_path(profile), class: "footer-link"
             .w-full.md:w-1/3.py-3.md:py-8.px-3
               .footer-title Liens rapides
-              ul.text-gray-600
+              ul
                 li = link_to "Actualités", posts_path, class: "footer-link"
                 li = link_to "Actions", activities_path, class: "footer-link"
                 li = link_to "Evénements", events_path, class: "footer-link"
@@ -96,7 +96,7 @@ html lang='fr'
                 li = link_to "Chiffres clés", key_numbers_path, class: "footer-link"
                 li = link_to "Ressources", resources_path, class: "footer-link"
           .separator.h-7.my-auto
-          .w-full.md:w-1/3.py-3.md:py-8.px-8.text-gray-600
+          .w-full.md:w-1/3.py-3.md:py-8.px-8
             - if Setting.logo_primary.present?
               => image_tag Setting.logo_primary.variant(resize_to_limit: [nil, 150]), class: "mb-5"
             .pole-contact.ml-24
