--- a/app/views/partners/_card.html.slim
+++ b/app/views/partners/_card.html.slim
@@ -8,5 +8,5 @@
       - else
         = partner.title
     - if partner.description.present?
-      p.text-gray-700.text-sm
+      p.text-sm
         == partner.description
