--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -10,13 +10,13 @@
       = image_tag  @post.image, class: "mb-8 mx-auto"
     .mb-24== @post.description
   .md:w-2/6.px-4.md:pr-0
-    p.text-gray-800.mb-2 Publié le #{l(@post.published_at, format: :day)}
+    p.mb-2 Publié le #{l(@post.published_at, format: :day)}
     div
       - if @post.post_category.present?
-        span.inline-block.bg-gray-200.rounded-full.px-3.py-1.text-sm.font-semibold.text-gray-700.mr-2.mb-2 
+        span.inline-block.bg-c-gray-light.rounded-full.px-3.py-1.text-sm.font-semibold.mr-2.mb-2 
           = link_to @post.post_category.title, posts_path({by_post_category: @post.post_category.id})
       - @post.themes.enabled.each do |theme|
-        span.inline-block.bg-gray-200.rounded-full.px-3.py-1.text-sm.font-semibold.text-gray-700.mr-2.mb-2 
+        span.inline-block.bg-c-gray-light.rounded-full.px-3.py-1.text-sm.font-semibold.mr-2.mb-2 
           = link_to theme.title, posts_path({by_theme: theme.id})
     = render 'resources/section', resources: @post.resources.enabled
 
