--- a/app/views/searches/_card.html.slim
+++ b/app/views/searches/_card.html.slim
@@ -6,6 +6,6 @@
     .mb-4
       h3.uppercase.itc-demi.text-xl.leading-5
         = link_to item.title, item
-      p.uppercase.text-gray-600.text-sm = class_name(item)
-    p.text-gray-700.text-sm
+      p.uppercase.text-sm = class_name(item)
+    p.text-sm
       == item.description.to_plain_text.truncate(200)
