--- a/app/views/searches/_form.html.slim
+++ b/app/views/searches/_form.html.slim
@@ -1,5 +1,5 @@
 = form_tag search_path, method: :get do
   .flex
     = text_field_tag :query, params[:query], placeholder: "Je recherche...", class: "flex-1 px-2 block w-full rounded-none border border-gray-100 bg-secondary-light"
-    / = button_tag "", class: 'inline-flex items-center px-3 border border-l-0 border-gray-100 bg-gray-50 text-gray-500 text-sm' do
+    / = button_tag "", class: 'inline-flex items-center px-3 border border-l-0 border-c-gray-light bg-c-gray-light text-c-gray-dark text-sm' do
     /   i.fas.fa-search
