--- a/app/front/styles/application/breadcrumb.sass
+++ b/app/front/styles/application/breadcrumb.sass
@@ -2,7 +2,7 @@
   display: flex
   @apply px-8
   @apply py-3
-  @apply text-c-gray-dark
+  @apply text-c-gray-800
   text-transform: uppercase
 .breadcrumb-item:not(:last-child)
   margin-right: 0.2rem
