--- a/app/front/styles/application/home.sass
+++ b/app/front/styles/application/home.sass
@@ -10,8 +10,8 @@
   position: relative
 
 .home-baseline_text
-  line-height: 1.4
-  color: #fff
+  @apply text-c-gray-100
+  line-height: 2
   z-index: 2
 .home-baseline_texture
   display: block
