--- a/app/front/styles/application/layout.sass
+++ b/app/front/styles/application/layout.sass
@@ -9,7 +9,10 @@ html, body
   font-family: 'ITC Avant Garde Gothic Std Book'
   background-image: url("../images/bruit.png")
   background-repeat: repeat
-  @apply text-c-gray-dark
+  @apply text-c-gray-800
+
+.text-body
+  font-family: 'Calibri'
 
 // MENU
 .mobile-menu
@@ -86,7 +89,7 @@ html, body
 
 .footer-link
   @apply uppercase
-  @apply text-c-gray-dark
+  @apply text-c-gray-800
   @apply text-xs
 
 .separator
@@ -152,10 +155,10 @@ html, body
 .btn-default
   @apply border
   @apply border-gray-300
-  @apply bg-gray-50
-  @apply text-c-gray-dark
+  @apply bg-c-gray-100
+  @apply text-c-gray-800
   &:hover
-    @apply bg-gray-100
+    @apply bg-gray-200
 
 .btn-primary
   @apply bg-primary
