--- a/app/views/formations/_formation_card.html.slim
+++ b/app/views/formations/_formation_card.html.slim
@@ -11,7 +11,7 @@
         = image_tag formation.image, class: "mb-8 mx-auto"
 
   .px-8
-    .bg-c-gray-light.px-4.py-3.mb-3.flex.flex-col.md:flex-row.text-sm
+    .bg-c-gray-100.px-4.py-3.mb-3.flex.flex-col.md:flex-row.text-sm
       .w-full.md:w-3/4
         = render 'formations/meta_info', formation: formation
       - if formation.future?
