--- a/app/views/formations/subscriptions/new.html.slim
+++ b/app/views/formations/subscriptions/new.html.slim
@@ -8,7 +8,7 @@
     h1.mt-12.mb-4
       .text-2xl.itc-demi.text-primary.uppercase.text-center Inscription à la formation
       .main-title.text-center = @formation.title
-    .bg-c-gray-light.px-4.py-3.mb-8.flex.flex-col.md:flex-row.text-sm
+    .bg-c-gray-100.px-4.py-3.mb-8.flex.flex-col.md:flex-row.text-sm
       .w-full
         = render 'formations/meta_info', formation: @formation
 
