--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -61,7 +61,7 @@ html lang='fr'
 
     .footer
       .footer-line.w-full.bg-primary
-      .newsletter-subscription.bg-c-gray-light
+      .newsletter-subscription.bg-c-gray-100
         .max-w-6xl.mx-auto.flex.flex-col.md:flex-row.py-10
           .w-full.md:w-3/5.text-center.md:text-right.px-6
             p.uppercase = Setting.newsletter_subscription_title
@@ -73,7 +73,7 @@ html lang='fr'
 
       .footer-line-xl.w-full
 
-      .w-full.bg-c-gray-light
+      .w-full.bg-c-gray-100
         .max-w-6xl.mx-auto.flex.flex-col.md:flex-row
           .w-full.md:w-2/3.flex.flex-col.md:flex-row
             .w-full.md:w-1/3.py-3.md:py-8.px-3
