--- a/app/views/profiles/_card.html.slim
+++ b/app/views/profiles/_card.html.slim
@@ -1,6 +1,6 @@
 .flex.items-center.mb-2.cursor-pointer.box-link
-  .flex.flex-col.flex-shrink-0.w-16.p-1.border.border-gray-300.bg-c-gray-light.font-bold.uppercase.leading-4.text-center
+  .flex.flex-col.flex-shrink-0.w-16.p-1.border.border-gray-300.bg-c-gray-100.font-bold.uppercase.leading-4.text-center
     = image_pack_tag "picto/Picto-#{profile.key}.svg", class: "w-full"
   .px-2
     = link_to profile.title, profile_path(profile), class: 'itc-demi uppercase text-primary'
-    p.text-xs= profile.baseline.truncate(50)
+    p.text-body.text-xs= profile.baseline.truncate(50)
