--- a/app/views/main_pages/_key_numbers.html.slim
+++ b/app/views/main_pages/_key_numbers.html.slim
@@ -9,5 +9,5 @@
 
           p.px-6.py-4.text-right.text-sm.italic = key_number.source
         - if key_number.description.present?
-          .px-6.py-4.bg-c-gray-light
+          .px-6.py-4.bg-c-gray-100
             == key_number.description
