--- a/app/views/posts/_card.html.slim
+++ b/app/views/posts/_card.html.slim
@@ -1,5 +1,5 @@
 .post-card.max-w-md.overflow-hidden.mb-4.flex.cursor-pointer.box-link
-  .flex.flex-col.flex-shrink-0.w-24.h-16.p-1.bg-c-gray-light.border.border-gray-300.uppercase.text-center
+  .flex.flex-col.flex-shrink-0.w-24.h-16.p-1.bg-c-gray-100.border.border-gray-300.uppercase.text-center
     .text-lg.leading-snug= I18n.l(post.published_at, format: '%d')
     .text-sm.leading-tight= I18n.l(post.published_at, format: '%B')
     .text-xs.leading-tight= I18n.l(post.published_at, format: '%Y')
@@ -10,5 +10,5 @@
       h3.text-lg.uppercase.text-primary.leading-5.mb-2
         = link_to post.title, post_path(post)
 
-      p.text-sm
+      p.text-sm.text-body
         == post.description.to_plain_text.truncate(150)
