--- a/app/views/events/_event_card.html.slim
+++ b/app/views/events/_event_card.html.slim
@@ -1,6 +1,6 @@
 - item = AgendaItemDecorator.new(agenda_item)
 .flex.items-center.mb-2.cursor-pointer.box-link
-  .flex.flex-col.flex-shrink-0.justify-center.w-24.h-24.p-1.bg-c-gray-100.text-c-gray-600.border.border-gray-300.font-bold.uppercase.leading-4.text-center
+  .flex.flex-col.flex-shrink-0.justify-center.w-24.h-24.p-1.bg-c-gray-100.border.border-gray-300.font-bold.uppercase.leading-4.text-center
     .text-lg.leading-snug= item.day
     .text-sm.leading-tight= item.month
     .text-xs.leading-tight= item.year
