--- a/app/front/styles/application/custom.sass
+++ b/app/front/styles/application/custom.sass
@@ -1,29 +1,10 @@
 // Fichier où mettre le style propre à chaque projet
 
-.pic-home-01
-  height: 100%
-  width: 25%
-  background-size: 100%
-  background-position: -40% 0%
-  z-index: -2
+// .pic-home-01
 
-.pic-home-02
-  height: 100%
-  width: 100%
-  background-size: 250px
-  background-position: 100% 0%
-  z-index: -2
 
-//   height: 100%;
-// width: 250px;
-// background-size: 100%;
+// .pic-bottom
 
-.pic-home-03
-  height: 100%
-  width: 100%
-  background-size: 600px
-  background-position: bottom -350px right -350px
-  z-index: -2
 
 .bg-primary-bis
   background-image: url("../images/bg-primary-bis.png")
