--- a/app/front/styles/application/layout.sass
+++ b/app/front/styles/application/layout.sass
@@ -74,9 +74,6 @@ html, body
     list-style-type: decimal
     list-style-position: inside
 
-.bg-tercery
-  background-color: var(--color-tercery)
-
 .footer-line
   height: 15px
 .footer-line-xl
@@ -105,35 +102,6 @@ html, body
   height: 1px
   width: 1px
   overflow: hidden
-
-
-.bg-pic
-  background-repeat: no-repeat
-  background-attachment: scroll
-  position: absolute
-
-.pic-home-01
-  height: 100%
-  width: 25%
-  background-size: 90%
-  background-position: -40% 0%
-
-.pic-home-02
-  height: 100%
-  width: 100%
-  background-size: 250px
-  background-position: 100% 0%
-
-.pic-home-03
-  height: 100%
-  width: 100%
-  // background-size: 30%
-  // background-position: 130% 140%
-  background-size: 600px
-  background-position: bottom -350px right -350px
-
-.bg-primary-bis
-  background-color: var(--color-primary)
 
 .tabs
   a.active
@@ -177,3 +145,42 @@ html, body
   @apply text-primary
   @apply itc-demi
   @apply uppercase
+
+.bg-pic
+  background-repeat: no-repeat
+  background-attachment: scroll
+  position: absolute
+
+.pic-home-01
+  height: 80%
+  width: 200px
+  left: -40px
+  background-size: 200px
+  background-position: -30% 0%
+
+.pic-bottom
+  z-index: -1
+  background-image: url("../images/illus/pic-bottom.png")
+  // background-size: 200px
+  // background-position: bottom -10px right -10px
+  // width: 100%
+  // height: 100%
+
+  bottom: -250px
+  right: 0px
+  width: 200px
+  height: 100%
+  background-size: contain
+  background-position: bottom -10px right -10px
+
+.theme-illus
+  height: 80%
+  width: 200px
+  left: 0px
+  background-size: 200px
+
+.bg-primary-bis
+  background-color: var(--color-primary)
+
+.bg-tercery
+  background-color: var(--color-tercery)
