--- a/app/views/themes/show.html.slim
+++ b/app/views/themes/show.html.slim
@@ -1,4 +1,5 @@
 .flex.flex-col.md:flex-row.mt-4
+  = render 'layouts/bg-pic', filename: @theme.title.parameterize, css_class: 'theme-illus'
   .md:w-1/6
   .md:w-3/6.bg-white.p-6
     h1.main-title.mt-6.mb-4 = @theme.title
