--- a/app/views/shared/_person_card.html.slim
+++ b/app/views/shared/_person_card.html.slim
@@ -1,6 +1,6 @@
-.staff_member-card.max-w-md.rounded.overflow-hidden.shadow-lg.mb-4
+.staff_member-card.max-w-md.rounded.overflow-hidden.shadow-lg.mb-4.break-inside.my-6.bg-c-gray-100
   - if person.image.attached?
-    = image_tag person.image.variant(resize_to_fill: [500, 300]), class: "w-full"
+    = image_tag person.image.variant(resize_and_pad: [500, 300]), class: "w-full"
   .px-6.py-4
     h3.font-bold.text-xl
       - if person.respond_to?(:link) && person.link.present?
