--- a/app/views/adherents/index.html.slim
+++ b/app/views/adherents/index.html.slim
@@ -1,8 +1,10 @@
 - content_for :title, 'Adhérents'
 
-= render layout: 'layouts/base' do
+= render layout: 'layouts/persons' do
   - @adherent_categories.each do |category|
     .mb-12
       h2.itc-demi.text-2xl.text-primary.uppercase.mb-6.text-center = category.title
+      / .masonry.before:box-inherit.after:box-inherit
       .grid.grid-cols-1.md:grid-cols-2.gap-4
+
         = render partial: 'shared/person_card', collection: category.adherents.enabled, as: :person
