--- a/app/views/partners/index.html.slim
+++ b/app/views/partners/index.html.slim
@@ -1,6 +1,6 @@
 - content_for :title, 'Partenaires'
 
-= render layout: 'layouts/base' do
+= render layout: 'layouts/persons' do
   - @partner_categories.each do |category|
     .mb-12
       h2.itc-demi.text-2xl.text-primary.uppercase.mb-6.text-center = category.title
