--- a/app/views/staff_members/index.html.slim
+++ b/app/views/staff_members/index.html.slim
@@ -1,6 +1,6 @@
 - content_for :title, 'Équipe'
 
-= render layout: 'layouts/base' do
+= render layout: 'layouts/persons' do
   - @staff_member_categories.each do |category|
     .mb-12
       h2.title-2.mb-6.text-center = category.title
