--- a/app/views/activities/show.html.slim
+++ b/app/views/activities/show.html.slim
@@ -7,8 +7,8 @@
     - if @activity.image.present?
       = image_tag  @activity.image, class: "mb-8 mx-auto"
     - if @activity.short_description.present?
-      p.mb-24.text-primary.text-lg= @activity.short_description
-    .mb-24
+      p.mb-24.text-primary.text-lg.text-body= @activity.short_description
+    .mb-24.text-body
       == @activity.description
 
   .md:w-2/6.px-4.md:pr-0
