--- a/app/views/basic_pages/show.html.slim
+++ b/app/views/basic_pages/show.html.slim
@@ -6,7 +6,7 @@
   .md:w-1/6
   .md:w-3/6.bg-white.p-6
     h1.main-title.mt-6.mb-4 = @basic_page.title
-    .mb-24== @basic_page.description
+    .mb-24.text-body== @basic_page.description
 
   .md:w-2/6.px-4.md:pr-0
     = render 'resources/section', resources: @basic_page.resources.enabled
