--- a/app/views/formations/_formation_card.html.slim
+++ b/app/views/formations/_formation_card.html.slim
@@ -4,7 +4,7 @@
       h3.title-2.mb-3 = formation.title
       - unless params['sort']=='by_formation_category'
         = formation.formation_category.title
-      .mb-3.text-sm == formation.description
+      .mb-3.text-sm.text-body == formation.description
 
     .w-full.md:w-2/5
       - if formation.image.attached?
