--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -8,9 +8,9 @@
     h1.main-title.mt-6.mb-4 = @post.title
     - if @post.image.present?
       = image_tag  @post.image, class: "mb-8 mx-auto"
-    .mb-24== @post.description
+    .mb-24.text-body== @post.description
   .md:w-2/6.px-4.md:pr-0
-    p.mb-2 Publié le #{l(@post.published_at, format: :day)}
+    p.mb-2.text-body Publié le #{l(@post.published_at, format: :day)}
     div
       - if @post.post_category.present?
         span.inline-block.bg-c-gray-100.rounded-full.px-3.py-1.text-sm.font-semibold.mr-2.mb-2 
