--- a/app/views/themes/show.html.slim
+++ b/app/views/themes/show.html.slim
@@ -7,8 +7,8 @@
     - if @theme.image.present?
       = image_tag  @theme.image, class: "mb-8 mx-auto"
     - if @theme.short_description.present?
-      p.mb-24.text-primary.text-lg= @theme.short_description
-    .mb-24== @theme.description
+      p.mb-24.text-primary.text-lg.text-body= @theme.short_description
+    .mb-24.text-body== @theme.description
 
   .md:w-2/6.px-4.md:pr-0
     = render 'activities/section', activities: @theme.activities.enabled
