--- a/app/views/layouts/_block_menu.html.slim
+++ b/app/views/layouts/_block_menu.html.slim
@@ -1,17 +1,17 @@
-div.block-menu-toggler data-action="mouseenter->main-menu#openBlockMenu mouseleave->main-menu#closeBlockMenu"
+div.block-menu-toggler class="#{css_class}" data-action="mouseenter->main-menu#openBlockMenu mouseleave->main-menu#closeBlockMenu"
   = active_link_to item.title, item_path, title: item.title, active: :inclusive, class: "relative md:inline-flex md:w-auto w-full px-3 py-2 items-center justify-center text-primary uppercase"
   nav.block-menu.absolute.left-0.w-full.bg-c-gray-100.border-t.border-white data-target="main-menu.blockMenu"
     .container.mx-auto.flex.py-12
       .w-1/2.px-4
-        h3.mb-3.uppercase.text-primary.font-bold= link_to item.baseline, item_path
+        h3.mb-3.uppercase.text-primary.itc-bold= link_to item.baseline, item_path
         p.text-sm = item.short_description
-        = link_to "Lire la suite", item_path, class: "underline"
+        = link_to "Lire la suite", item_path, class: "text-primary uppercase text-sm"
       - if item.is_a?(Theme) && item.activities.enabled.any?
         .separator.h-40
         .w-1/4.px-4
           h4.uppercase.text-sm.text-primary.mb-2 = "Nos actions"
           - item.activities.enabled.order_by_theme_interface_position.first(5).each do |activity|
-            li.list-none = link_to activity.title, activity_path(activity)
+            li.list-none = link_to activity.title, activity_path(activity), class: 'text-body text-xs mb-1 inline-block'
       - item.menu_blocks.each do |menu_block|
         .separator.h-40
         .w-1/4.px-4
@@ -19,4 +19,4 @@ div.block-menu-toggler data-action="mouseenter->main-menu#openBlockMenu mouselea
             h4.uppercase.text-sm.text-primary.mb-2 = menu_block.title
           ul
             - menu_block.menu_items.each do |menu_item|
-              li = link_to menu_item.title, menu_item.url
+              li = link_to menu_item.title, menu_item.url, class: 'text-body text-xs mb-1 inline-block'
