--- a/app/front/styles/application.scss
+++ b/app/front/styles/application.scss
@@ -5,4 +5,5 @@
 @import "application/breadcrumb.sass";
 @import "application/home.sass";
 @import "application/sitemap.sass";
+@import "application/pages.sass";
 @import "application/custom.sass";
