--- a/app/views/activities/_card.html.slim
+++ b/app/views/activities/_card.html.slim
@@ -2,8 +2,9 @@
   - if activity.image.attached?
     = image_tag activity.image.variant(resize_to_fill: [500, 300]), class: "w-full"
   .px-6.py-4
-    = render 'shared/item_relations', item: activity
-    h3.text-lg.uppercase.text-primary.leading-5.mb-2
-      = link_to activity.title, activity_path(activity)
+    .mb-2
+      h3.text-lg.uppercase.text-primary.leading-5
+        = link_to activity.title, activity_path(activity)
+      = render 'shared/item_relations', item: activity
     p.text-sm
       == activity.description.to_plain_text.truncate(200)
