--- a/app/front/styles/application/breadcrumb.sass
+++ b/app/front/styles/application/breadcrumb.sass
@@ -3,6 +3,7 @@
   @apply px-8
   @apply py-3
   @apply text-c-gray-800
+  @apply text-xs
   text-transform: uppercase
 .breadcrumb-item:not(:last-child)
   margin-right: 0.2rem
