--- a/app/views/activities/show.html.slim
+++ b/app/views/activities/show.html.slim
@@ -1,15 +1,15 @@
 .flex.flex-col.md:flex-row.mt-4
   .md:w-1/6
   .md:w-3/6.bg-white.p-6
-    = render 'shared/item_relations', item: @activity
-
-    h1.main-title.mt-6.mb-4  = @activity.title
-    - if @activity.image.present?
-      = image_tag  @activity.image, class: "mb-8 mx-auto"
+    .header.mt-6.mb-4
+      h1.main-title  = @activity.title
+      = render 'shared/item_relations', item: @activity
     - if @activity.short_description.present?
       p.mb-24.text-primary.text-lg.text-body= @activity.short_description
     .mb-24.text-body
       == @activity.description
 
   .md:w-2/6.px-4.md:pr-0
+    - if @activity.image.present?
+      = image_tag  @activity.image, class: "mb-4"
     = render 'resources/section', resources: @activity.resources.enabled
