--- a/app/views/admin/themes/_form.html.slim
+++ b/app/views/admin/themes/_form.html.slim
@@ -16,9 +16,9 @@
   = f.label :description, class: "font-weight-bold"
   = f.rich_text_area :description
 
-= render partial: 'admin/shared/picture_form', locals: { \
-  f: f, \
-  destroy_path: f.object.image.present? ? destroy_upload_admin_theme_path(f.object, f.object.image.id, redirect: :edit) : nil}
+/ = render partial: 'admin/shared/picture_form', locals: { \
+/   f: f, \
+/   destroy_path: f.object.image.present? ? destroy_upload_admin_theme_path(f.object, f.object.image.id, redirect: :edit) : nil}
 
 = render "admin/resources/nested_form", f: f
 
