--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -5,19 +5,21 @@
 .flex.flex-col.md:flex-row.mt-4
   .md:w-1/6
   .md:w-3/6.bg-white.p-6
-    h1.main-title.mt-6.mb-4 = @post.title
+    .mt-6.mb-4
+      h1.main-title = @post.title
+      = render 'shared/item_relations', item: @post
     - if @post.image.present?
       = image_tag  @post.image, class: "mb-8 mx-auto"
     .mb-24.text-body== @post.description
-  .md:w-2/6.px-4.md:pr-0
     p.mb-2.text-body Publié le #{l(@post.published_at, format: :day)}
-    div
-      - if @post.post_category.present?
-        span.inline-block.bg-c-gray-100.rounded-full.px-3.py-1.text-sm.font-semibold.mr-2.mb-2 
-          = link_to @post.post_category.title, posts_path({by_post_category: @post.post_category.id})
-      - @post.themes.enabled.each do |theme|
-        span.inline-block.bg-c-gray-100.rounded-full.px-3.py-1.text-sm.font-semibold.mr-2.mb-2 
-          = link_to theme.title, posts_path({by_theme: theme.id})
+  .md:w-2/6.px-4.md:pr-0
+    / div
+    /   - if @post.post_category.present?
+    /     span.inline-block.bg-c-gray-100.rounded-full.px-3.py-1.text-sm.font-semibold.mr-2.mb-2 
+    /       = link_to @post.post_category.title, posts_path({by_post_category: @post.post_category.id})
+    /   - @post.themes.enabled.each do |theme|
+    /     span.inline-block.bg-c-gray-100.rounded-full.px-3.py-1.text-sm.font-semibold.mr-2.mb-2 
+    /       = link_to theme.title, posts_path({by_theme: theme.id})
     = render 'resources/section', resources: @post.resources.enabled
 
 
