--- a/app/views/themes/show.html.slim
+++ b/app/views/themes/show.html.slim
@@ -4,17 +4,17 @@
   .md:w-3/6.bg-white.p-6
     h1.main-title.mt-6.mb-4 = @theme.title
     p.title-2.mb-16 = @theme.baseline
-    - if @theme.image.present?
-      = image_tag  @theme.image, class: "mb-8 mx-auto"
     - if @theme.short_description.present?
       p.mb-24.text-primary.text-lg.text-body= @theme.short_description
     .mb-24.text-body== @theme.description
 
   .md:w-2/6.px-4.md:pr-0
+    - if @theme.image.present?
+      = image_tag  @theme.image, class: "mb-4"
     = render 'activities/section', activities: @theme.activities.enabled
     = render 'resources/section', resources: @theme.resources.enabled
 
-    .bg-gray-200.p-12.text-center
+    .bg-c-gray-100.p-12.text-center
       h4.uppercase.mb-3= Setting.contact_bloc_description
       = image_pack_tag "picto/Picto-contact.svg", class: "w-14 mb-6 mx-auto"
       = link_to Setting.contact_bloc_button, basic_page_path(@contact_page), class: "bg-primary hover:bg-primary-dark text-sm text-white uppercase pt-3 pb-2 px-4"
