--- a/app/views/basic_pages/show.html.slim
+++ b/app/views/basic_pages/show.html.slim
@@ -8,5 +8,8 @@
     h1.main-title.mt-6.mb-4 = @basic_page.title
     .mb-24.text-body== @basic_page.description
 
+    - if @basic_page.key == "contact"
+      = render 'basic_pages/contact'
+
   .md:w-2/6.px-4.md:pr-0
     = render 'resources/section', resources: @basic_page.resources.enabled
