--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -129,7 +129,9 @@ html lang='fr'
             .separator.white.h-4.my-auto
             = link_to "Plan du site", sitemap_path, class: "px-3"
             .separator.white.h-4.my-auto
-            = link_to "Mentions légales", "#", class: "px-3"
+            = link_to "Mentions légales", basic_page_path(@legal_mentions_page), class: "px-3"
+            .separator.white.h-4.my-auto
+            = link_to "Politique de confidentialité", basic_page_path(@data_policy_page), class: "px-3"
           .social.flex-row.md:justify-end
             - if Setting.facebook
               = link_to Setting.facebook, title: "page facebook", class: "inline-block w-8 h-8 p-1 border text-center ml-2" do
