--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,6 +13,7 @@ html lang='fr'
 
   = stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
   = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
+  = render 'shared/favicon'
 
   body.h-full
     .relative data-controller="main-menu"
