--- a/app/front/styles/application/layout.sass
+++ b/app/front/styles/application/layout.sass
@@ -11,6 +11,10 @@ html, body
   background-repeat: repeat
   @apply text-c-gray-800
 
+body
+  position: relative
+  z-index: -2
+
 .text-body
   font-family: 'Calibri'
 
