--- a/app/views/resources/index.html.slim
+++ b/app/views/resources/index.html.slim
@@ -23,3 +23,5 @@
             = link_to "Retourner voir toutes les ressources", resources_path, class: "uppercase text-primary underline"
           -else 
             = link_to "Retourner à la page d'accueil", root_path, class: "uppercase text-primary underline"
+    .text-center
+      = paginate @resources
