--- a/app/views/shared/_favicon.html.slim
+++ b/app/views/shared/_favicon.html.slim
@@ -1,7 +1,7 @@
-= favicon_pack_tag 'favicon/favicon.svg'
-/ <link rel="apple-touch-icon" sizes="180x180" href="<%= asset_path 'favicon/apple-touch-icon.png' %>">
-/ <link rel="icon" type="image/png" sizes="32x32" href="<%= asset_path 'favicon/favicon-32x32.png' %>">
-/ <link rel="icon" type="image/png" sizes="16x16" href="<%= asset_path 'favicon/favicon-16x16.png' %>">
+= favicon_pack_tag 'favicon/favicon.svg', rel: "shortcut icon"
+= favicon_pack_tag 'favicon/apple-touch-icon.png', rel: "apple-touch-icon", sizes: "180x180"
+= favicon_pack_tag 'favicon/favicon-32x32.png', type: "image/png", sizes: "32x32"
+= favicon_pack_tag 'favicon/favicon-16x16.png', type: "image/png", sizes: "16x16"
 / <link rel="manifest" href="<%= asset_path 'favicon/site.webmanifest' %>">
 / <link rel="shortcut icon" href="<%= asset_path 'favicon/favicon.svg' %>">
 / <meta name="msapplication-TileColor" content="#da532c">
