Fix newsletter flash message

--- a/app/front/styles/application/flash-message.sass
+++ b/app/front/styles/application/flash-message.sass
@@ -3,6 +3,7 @@
   top: 100px
   left: 1.25rem
   right: 1.25rem
+  z-index: 10
 @media (min-width: 1024px)
   .flash-message
     @apply w-2/3
@@ -13,10 +14,10 @@
     @apply absolute top-0 right-0 py-3 px-5
 
 .alert-warning
-  @apply bg-yellow-400 text-yellow-900
+  @apply bg-yellow-300 text-yellow-900
 
 .alert-danger
-  @apply bg-red-400 text-red-900
+  @apply bg-red-300 text-red-900
 
 .alert-success
-  @apply bg-green-400 text-green-900
+  @apply bg-primary-dark text-white
